--- a/devlink/HomeFifth.module.css
+++ b/devlink/HomeFifth.module.css
@@ -91,10 +91,7 @@
 
 @media screen and (max-width: 479px) {
   .paragraph-7 {
-    width: 200px;
-    margin-left: 60px;
-    font-size: 10px;
-    line-height: 15px;
+    display: block;
   }
 }
 
